--- a/.github/workflows/python_app.yaml
+++ b/.github/workflows/python_app.yaml
@@ -2,7 +2,8 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 # TODO: Change the workflow name to something more specific
-name: Python application
+
+name: Python application CI 
 
 # This defines the triggers for the workflow
 # i.e. when the workflow will run
@@ -29,13 +30,14 @@ jobs:
 
     # This step sets up Python on the runner
     # TODO: Change the Python version to 3.12
-    - name: Set up Python 3.10
+      - name: Set up Python 3.12
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.12"
 
     # TODO: Install uv on the runner
-
+    - name: Install the latest version of uv
+      uses: astral-sh/setup-uv@v7
 
 
     # The next steps use *run* to execute commands on the runner
@@ -44,7 +46,7 @@ jobs:
     # This step installs dependencies
     # TODO: Replace the run block, using `uv` to sync the environment
     - name: Install dependencies
-      run: |
+      run: uv
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
@@ -53,7 +55,7 @@ jobs:
     # TODO: Update the run block. Use: uv run -m pytest
     # (we need -m so that our tests can find our notebook code)
     - name: Test with pytest
-      run: |
+      run: uv run -m pytest
         pytest
 
     # This step runs the linter against the codebase
