--- a/.github/workflows/python_app.yaml
+++ b/.github/workflows/python_app.yaml
@@ -54,15 +54,14 @@ jobs:
     # (we need -m so that our tests can find our notebook code)
     - name: Test with pytest
       run: uv run -m pytest
-        pytest
+      
 
     # This step runs the linter against the codebase
     # TODO: Replace the run block to use our preferred linter
-    - name: Lint with flake8
+    - name: Lint with ruff
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        uv run ruff check
+
 
     # TODO: Add steps to run formatting steps and type checking
+  
